# ducky-detector

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
src/: Detector.cpp
src/analysis/: CMakeLists.txt  Scanner.cpp  Scanner.hpp
src/analysis/fileExtension/: FileExtensionAnalyser.cpp  FileExtensionAnalyser.hpp
src/analysis/partition/: PartitionAnalyser.cpp  PartitionAnalyser.hpp
src/analysis/preparation/: PreparationHelper.cpp  PreparationHelper.hpp
src/analysis/usbPeriphery/: UsbPeripheryAnalyser.cpp  UsbPeripheryAnalyser.hpp
src/analysis/virus/: MalwareAnalyserWithClamAv.cpp  MalwareAnalyserWithClamAv.hpp
src/application/: CMakeLists.txt  DuckyDetectorApplicationGui.cpp  DuckyDetectorApplicationGui.hpp  DuckyDetectorApplicationTerminal.cpp  DuckyDetectorApplicationTerminal.hpp
src/config/: CMakeLists.txt  Settings.hpp
src/gui/: CMakeLists.txt  DuckyDetectorGui.cpp  DuckyDetectorGui.hpp
src/guiXML/: details_dialog.glade  duckyDetector.glade  duckyDetector.glade~
src/util/: CMakeLists.txt  Device.cpp  Device.hpp  FileHandler.cpp  FileHandler.hpp  Interface.cpp  Interface.hpp  Setup.cpp  Setup.hpp
src/util/printing/: PrintingDetailsService.cpp  PrintingDetailsService.hpp  PrintingResultService.cpp  PrintingResultService.hpp  PrintingService.cpp  PrintingService.hpp
